feat(js) => burger menu, breakpoint responsive

--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
   </head>
   <body>
     <header>
+      <span id="burger"></span>
       <li>
         <a href=""><img src="./images/logo.svg" alt="" /></a>
       </li>
@@ -157,5 +158,7 @@
         <p>© Easybank. All Rights Reserved</p>
       </div>
     </footer>
+
+    <script src="main.js"></script>
   </body>
 </html>
